# academycloud_backend

./: .gitignore  README.md  alembic.ini  env.sample  pyproject.toml  russian_spch.txt  test.py  test_insert.py  words.xlsx
app/: celery.py  config.py  flower.py  main.py
app/auth/: auth_router.py  dependencies.py  schemas.py  utils.py
app/base/: email_utils.py  generate_random_password.py  set_user_role.py  templates.py
app/config/: app_settings.py  db_settings.py  worker.py
app/database/: dbms.py  settings.py
app/database/migrations/: env.py
app/database/migrations/versions/: 015348df9fd4_added_role_table.py  27611acf17ef_updated_user_role_column.py  2d95f116c46e_added_unique_parametr_to_profile_user_.py  4b973c40c22f_added_new_tables_item_lesson_lesson_.py  55fb9694dd6d_initial_revision.py  607bd795d11f_removed_path_column_from_lesson_table.py  6242e3cf86a9_updated_user_table_phone_removed_email_.py  72f9b5bfc000_create_table_user.py  8196df2e7398_create_classroom_table.py  847158b9e7cd_updated_item_table.py  (+10 more)
app/database/models/: __init__.py  classroom.py  country.py  file_accounting.py  file_type.py  item.py  lesson.py  lesson_type.py  part_of_speech.py  part_of_speech_words.py  profile.py  role.py  stats.py  user.py
app/db_endpoints/: db_router.py
app/equations/quadratic_equations/: equation_router.py  get_equation.py
app/exceptions/: http_exceptions.py
app/files/: file_dao.py  file_type_dao.py  files_router.py  utils.py
app/lessons/files/: 5.json  6.json  7.json  8.json  9.json
app/lessons/manage/: item_dao.py  lesson_dao.py  lesson_type_dao.py  manage_lesson_router.py  schemas.py  stats_dao.py  utils.py
app/russian/parts_of_speech/: prts_of_spch_logic.py  prts_of_spch_router.py
app/tasks/: tasks.py
app/templates/: confirm_info.html  email_confirm.html  email_restore_account.html  email_restore_password.html
app/user/: schemas.py  user_router.py
app/users/: profile_dao.py  schemas.py  user_dao.py  users_router.py  utils.py
(+5 files in other folders)
